# qt_qml_plus_conan

./: Basic_en.ts  CMakeLists.txt  README.md  conanfile.txt  main.cpp
rand-lib/: CMakeLists.txt  rand-lib.cpp  rand-lib.h
ui-app/: Basic.qml  Basic_ru.ts  CMakeLists.txt  main.cpp
